# scripts.ghstars-ng

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_legacy_baseline.py  0002_job_hierarchy.py  0003_arxiv_sync_windows.py  0004_arxiv_archive_appearances.py  0007_job_attempt_mode.py  0008_job_attempt_series_key.py  0009_arxiv_daily_feed_fields.py  0013_job_item_resume_progress.py
docs/design/: common.md  find-repos.md  refresh-metadata.md  sync-arxiv.md
docs/plan/: 2026-04-25-01-55-16.md  2026-04-25-11-31-47.md  2026-04-25-12-20-46.md  2026-04-25-13-58-39.md  2026-04-25-14-11-45.md  2026-04-25-14-25-04.md  2026-04-25-15-41-51.md  2026-04-25-22-10-15.md  2026-04-25-23-03-47.md  2026-04-27-18-22-37.md  2026-04-27-18-42-34.md  2026-04-27-19-21-26.md  2026-04-27-20-48-27.md  2026-04-28-10-35-58.md  2026-04-28-10-49-46.md  2026-04-28-11-02-53.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
src/ghstars/: cli.py  models.py
src/ghstarsv2/: __init__.py  api.py  app.py  cli.py  config.py  db.py  jobs.py  main.py  models.py  (+6 more)
tests/: test_arxiv_sync.py  test_cli_link_sync.py  test_job_batching.py  test_job_progress.py  test_job_type_migration.py  test_jobs.py  test_public_api.py  test_storage.py  test_sync_policy.py
tests_v2/: conftest.py  test_arxiv_sync.py  test_export_modes.py  test_job_batching.py  test_job_progress.py  test_public_api.py  test_scope_validation.py  test_sync_policy.py
(+27 files in other folders)
